--- a/.env.production
+++ b/.env.production
@@ -1,37 +1,14 @@
 # PROJECT 
-PROJECT_NAME=AqiFactura
+PROJECT_NAME=DemoJockes
 PROJECT_API_V1=1
 DEBUG=False
 
 # SQLALCHEMY
-#SQLALCHEMY_DATABASE_URI=postgresql://dbuser:dbpass@localhost:5432/aqfactura
-SQLALCHEMY_DATABASE_URI='mysql+pymysql://root:dbpass@localhost/sms?charset=utf8mb4'
+SQLALCHEMY_DATABASE_URI='mysql+pymysql://root:dbpass@localhost/demo2023?charset=utf8mb4'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 SQLALCHEMY_ENGINE_OPTIONS_POOL_PRE_PING=True
 SQLALCHEMY_ENGINE_OPTIONS_POOL_RECYCLE=280
 SQLALCHEMY_ENGINE_OPTIONS_POOL_TIMEOUT=110
 
-# SMTP 
-SMTP_URL='smtp.gmail.com'
-SMTP_PORT=587
-SMTP_USER='hugo.93wal@gmail.com'
-SMTP_PASSWORD= 'kodydmwoknsobdph'
-
-# JWT HEADERS
-JWT_SECRET='NJKS!!@@$DEF8N238B!D3BDHDU7BFSNLK0OODFYSDF9S7VDFJKSBDFJSBF9SVFD'
-JWT_PREFIX=unique
-
 #OTROS
 TIME_ZONE=America/Lima
-
-#LOGS
-LOG_NAME_GROUP=
-
-#Access Politica Aws
-AWS_ACCESS_KEY_ID=AKIA4N5POMR5GW6MR7PS
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-east-1
-
-#Aws S3
-AWS_S3_REGION=us-east-1
-AWS_S3_BUCKET=aq-factura-stage-data
